--- a/mania_simple_hiterror_colorful/css/style.css
+++ b/mania_simple_hiterror_colorful/css/style.css
@@ -76,7 +76,78 @@ html {
 #tick26,
 #tick27,
 #tick28,
-#tick29{
+#tick29,
+#tick30,
+#tick31,
+#tick32,
+#tick33,
+#tick34,
+#tick35,
+#tick36,
+#tick37,
+#tick38,
+#tick39,
+#tick40,
+#tick41,
+#tick42,
+#tick43,
+#tick44,
+#tick45,
+#tick46,
+#tick47,
+#tick48,
+#tick49,
+#tick50,
+#tick51,
+#tick52,
+#tick53,
+#tick54,
+#tick55,
+#tick56,
+#tick57,
+#tick58,
+#tick59,
+#tick60,
+#tick61,
+#tick62,
+#tick63,
+#tick64,
+#tick65,
+#tick66,
+#tick67,
+#tick68,
+#tick69,
+#tick70,
+#tick71,
+#tick72,
+#tick73,
+#tick74,
+#tick75,
+#tick76,
+#tick77,
+#tick78,
+#tick79,
+#tick80,
+#tick81,
+#tick82,
+#tick83,
+#tick84,
+#tick85,
+#tick86,
+#tick87,
+#tick88,
+#tick89,
+#tick90,
+#tick91,
+#tick92,
+#tick93,
+#tick94,
+#tick95,
+#tick96,
+#tick97,
+#tick98,
+#tick99
+{
     position: absolute;
     top: -9px;
     height: 20px;
